Fixes #906 add collapsed form styles to new filter form updates

--- a/src/client/styles/components/Search.scss
+++ b/src/client/styles/components/Search.scss
@@ -23,11 +23,11 @@
 
     .nypl-omni-fields-text {
       font-size: 0.9rem;
-      margin-left: 0.25rem;
+      margin-left: 0.15rem;
       padding-right: 0.25rem;
       float: left;
-      width: 40%;
-      top: 0.475rem;
+      top: 0.4rem;
+      width: 50%;
       position: relative;
       background-color: #fff;
     }
@@ -50,6 +50,7 @@
       padding: 0;
       margin: 0 1%;
       text-indent: 0.5rem;
+      top: 0.4rem;
     }
   }
 
@@ -61,19 +62,14 @@
     border-left: solid 0.0625rem #080807;
     border-radius: 0;
     color: #fff;
-    width: 6rem;
+    width: 15%;
+    min-width: 5rem;
+    max-width: 7rem;
     height: 3rem;
     float: right;
     padding-top: 0.6rem;
     padding-right: 0.8em;
     text-indent: -1rem;
-
-    svg {
-      fill: #fff;
-      position: relative;
-      float: left;
-      padding-top: 0.3rem;
-    }
 
     .nypl-search-icon {
       background-color: #1B7FA7;
@@ -81,6 +77,15 @@
     }
   }
 
+  svg {
+    fill: #fff;
+    position: relative;
+    height: 28px;
+    width: 28px;
+    margin-left: 75%;
+  }
+
+ 
   // Small screen stacked version of search form elements.
 
   @media (max-width: $xtrasmall-breakpoint) {
@@ -93,6 +98,7 @@
     .nypl-omnisearch-button {
       border: solid 0.0625rem #080807;
       border-radius: 0.2rem;
+      width: 6rem;
     }
 
     .nypl-text-field {
@@ -111,7 +117,7 @@
       }
 
       input[type=text] {
-        width: 96%;
+        width: 100%;
       }
     }
   }
